# ecalc

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
configured_files/: config.hpp.in
include/: ecalc.h
src/: CMakeLists.txt  main.cpp
src/ecalc/: CMakeLists.txt  ecalc.cpp
src/intro/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/catch2/ecalc/: catch2_test_ecalc.cpp
test/gtest/: CMakeLists.txt
test/gtest/ecalc/: gtest_ecalc.cpp
